fixed filters being too large

--- a/style.css
+++ b/style.css
@@ -443,7 +443,6 @@ input[type="text"] {
 
 input[type="apitext"] {
     width: 90%;
-    height: 99%;
     background-color:#1F2833;
     color:#CCFFCC;
     font-size: x-large;
